Alert dialog for exit added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Demo Shopping</string>
+    <string name="exit_title">EXIT</string>
+    <string name="exit_message_message">Do you wish to exit?</string>
+    <string name="exit_positive_button_caption">Yes</string>
+    <string name="exit_negative_button_caption">No</string>
 </resources>
